feat: add tiktok support and harden downloads